[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Intro.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BackgroundIntro.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/BarryPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/JohnPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PlayerPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/JohnConsole.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/BarryConsole.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/JohnClose.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/BarryClose.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/IntroDialogue.tscn" type="PackedScene" id=10]
[ext_resource path="res://SFX/322054__zimbot__engineroomsteady.ogg" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundIntro:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crew/JohnConsole:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crew/BarryConsole:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeInAlt"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundIntro:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.0313726, 0.0313726, 0.0313726, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crew/JohnConsole:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crew/BarryConsole:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundIntro:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.27451, 0.27451, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crew/JohnConsole:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.27451, 0.27451, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crew/BarryConsole:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.27451, 0.27451, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundIntro:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.27451, 0.27451, 0.27451, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crew/JohnConsole:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.27451, 0.27451, 0.27451, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crew/BarryConsole:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.27451, 0.27451, 0.27451, 1 ) ]
}

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackgroundIntro" parent="." instance=ExtResource( 2 )]
editor/display_folded = true

[node name="Popups" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="BarryPopup" parent="Popups" instance=ExtResource( 3 )]

[node name="JohnPopup" parent="Popups" instance=ExtResource( 4 )]

[node name="PlayerPopup" parent="Popups" instance=ExtResource( 5 )]

[node name="Crew" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, 550 )

[node name="JohnConsole" parent="Crew" instance=ExtResource( 6 )]
position = Vector2( 0, -550 )

[node name="BarryConsole" parent="Crew" instance=ExtResource( 7 )]
position = Vector2( 0, -550 )

[node name="JohnClose" parent="Crew" instance=ExtResource( 8 )]

[node name="BarryClose" parent="Crew" instance=ExtResource( 9 )]
position = Vector2( 2600, 0 )

[node name="Dialogues" type="Node" parent="."]
editor/display_folded = true

[node name="IntroDialogue" parent="Dialogues" instance=ExtResource( 10 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeInAlt = SubResource( 2 )
anims/FadeOut = SubResource( 3 )
anims/LowerLights = SubResource( 4 )

[node name="BackgroundSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -14.136
autoplay = true
[connection signal="button_id" from="Popups/BarryPopup" to="." method="_on_BarryPopup_button_id"]
[connection signal="button_id" from="Popups/JohnPopup" to="." method="_on_JohnPopup_button_id"]
[connection signal="button_id" from="Popups/PlayerPopup" to="." method="_on_PlayerPopup_button_id"]

[editable path="BackgroundIntro"]
